# training

applications/: ??????.DOC
aslr/: alsrtest.c  readme
autoconf-automake-libtool/foonly-2.0/: Makefile.am  Makefile.in  configure.ac  foonly  nly.c  scanner.c
autoconf-automake-libtool/foonly-2.0/.deps/.svn/: all-wcprops  entries
autoconf-automake-libtool/foonly-2.0/.deps/.svn/text-base/: foo.Po.svn-base  nly.Po.svn-base  parser.Po.svn-base  scanner.Po.svn-base
autoconf-automake-libtool/foonly-2.0/.svn/: all-wcprops  entries
autoconf-automake-libtool/foonly-2.0/.svn/text-base/: Makefile.svn-base  config.log.svn-base  config.status.svn-base  configure.svn-base  main.c.svn-base  parser.c.svn-base  parser.y.svn-base  test.sh.svn-base
autoconf-automake-libtool/foonly-2.0/autom4te.cache/.svn/: all-wcprops  entries
autoconf-automake-libtool/foonly-2.0/autom4te.cache/.svn/text-base/: output.0.svn-base  requests.svn-base  traces.0.svn-base  traces.1.svn-base
autoconf-automake-libtool/small-2.0/: Makefile  configure.ac  dir-arch.txt
autoconf-automake-libtool/small-2.0/.svn/: all-wcprops  entries
autoconf-automake-libtool/small-2.0/.svn/text-base/: Makefile.am.svn-base  Makefile.in.svn-base  aclocal.m4.svn-base  config-h.in.svn-base  config-in.txt.svn-base  config.h.svn-base  config.log.svn-base  config.status.svn-base  configure.svn-base
autoconf-automake-libtool/small-2.0/autom4te.cache/: output.2  requests  traces.1
autoconf-automake-libtool/small-2.0/autom4te.cache/.svn/: all-wcprops  entries
autoconf-automake-libtool/small-2.0/autom4te.cache/.svn/text-base/: output.1.svn-base  traces.0.svn-base  traces.2.svn-base
autoconf-automake-libtool/small-2.0/config/.svn/: all-wcprops  entries
autoconf-automake-libtool/small-2.0/m4/: sys_siglist.m4
autoconf-automake-libtool/small-2.0/m4/.svn/: all-wcprops  entries
autoconf-automake-libtool/small-2.0/m4/.svn/text-base/: readline.m4.svn-base  sys_errlist.m4.svn-base
autoconf-automake-libtool/small-2.0/replace/: Makefile  basename.c  configure.scan  readline.c  strcspn.c  strerror.c  waitpid.c
autoconf-automake-libtool/small-2.0/replace/.deps/.svn/: all-wcprops  entries
autoconf-automake-libtool/small-2.0/replace/.svn/: all-wcprops  entries
autoconf-automake-libtool/small-2.0/replace/.svn/text-base/: Makefile.am.svn-base  Makefile.in.svn-base  dummy.c.svn-base  strsignal.c.svn-base  strspn.c.svn-base
autoconf-automake-libtool/small-2.0/sic/: Makefile.in  builtin.c  common.h  configure.scan  error.h  eval.c  eval.h  list.c  list.h  sic.c  sic.h  xstrdup.c  xstrerror.c
autoconf-automake-libtool/small-2.0/sic/.deps/: error.Po  list.Po  xstrdup.Po  xstrerror.Po
autoconf-automake-libtool/small-2.0/sic/.svn/: all-wcprops  entries
autoconf-automake-libtool/small-2.0/src/: Makefile  Makefile.am  sic.c  sic_builtin.c  sic_syntax.c
autoconf-automake-libtool/small-2.0/src/.deps/: sic_builtin.Po  sic_repl.Po
autoconf-automake-libtool/small-2.0/src/.svn/: all-wcprops  entries
(+2410 files in other folders)
